--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,9 @@
 <body class="fullcolor">
 	<div id="page">
 		<div id="homepage" class="fullcolor">
-			<h2>a cover letter / love letter to</h2>
-			<h1>RocksBox</h1>
+			<h2>a cover letter / love letter</h2>
+			<h1><%= link_to "Dear RocksBox...", pieces_path, :class=>"entrancelink" %></h1>
 			<h2>xoxo - Kate Dramstad</h2>
-			<%= link_to "Time to learn more", pieces_path %>
 		</div>
 	</div>
 </body>
