--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,14 +29,14 @@ body {
 	font: normal 100% 'Lato', sans-serif;
 }
 
-h1, h2 {
+h2 {
 	font-weight: 300;
 }
 
 /* ---------IDs----------- */
 
 #header {
-	background-color: #4d87c5;
+	background-color: #3c79ba;
 	text-align: center;
 	margin: 0px;
 	color: #FFFFFF;
@@ -60,7 +60,6 @@ h1, h2 {
 	width: 80%;
 	max-width: 1024px;
 	margin: 0px auto;
-	background-color: #FFFFFF;
 }
 
 #footer {
@@ -70,7 +69,7 @@ h1, h2 {
 
 .cleanlink {
 	text-decoration: none;
-	color: #4d87c5;
+	color: #3c79ba;
 }
 
 .white {
@@ -79,6 +78,6 @@ h1, h2 {
 
 /*---------Classes----------*/
 .fullcolor {
-	background-color: #4d87c5;
+	background-color: #3c79ba;
 }
 
