--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -27,3 +27,17 @@ a.entrancelink:link, a.entrancelink:visited{
 }
 
 /*---------CoverLetter Action----------*/
+
+.letter {
+	color: #FFFFFF;
+	padding-top: 100px;
+	font-size: 24px;
+}
+
+.letter p{
+	padding-bottom: 20px;
+}
+
+#salutation {
+	font-size: 30px
+}
