--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -32,12 +32,15 @@ a.entrancelink:link, a.entrancelink:visited{
 	color: #FFFFFF;
 	padding-top: 100px;
 	font-size: 24px;
+	max-width: 700px !important;
 }
 
 .letter p{
 	padding-bottom: 20px;
+	line-height: 1.5;
+	letter-spacing: .01rem;
 }
 
-#salutation {
+.salutation {
 	font-size: 30px
 }
