--- a/app/views/pages/coverletter.html.erb
+++ b/app/views/pages/coverletter.html.erb
@@ -8,14 +8,14 @@
 </head>
 <body class="fullcolor">
 	<div id="page" class="letter">
-		<p id="salutation">Dear RocksBox,</p>
+		<p class="salutation">Dear RocksBox,</p>
 		<p>As a customer for the past two years, I am continually impressed with the delightful experience and customer service RocksBox delivers. Pun intended. I want to be a part of spreading this shopping revolution to as many women as possible.</p>
 		<p>I think I would be a great addition to your team as a full stack software engineer. As a graduate of Olin College with a degree in Computing, I have experience working with small teams on software projects up and down the stack, from a simple games in Python to writing device drivers in C. At Olin, I mastered the art of Just In Time learning, a skill I think is critical for a Full Stack developer.</p>
 		<p>As a PM on OneDrive for Business, I’ve focused on prioritizing which features we should invest in and delivering usability improvements to increase target metrics. I understand the importance of data in product development and ran the first A/B test in our organization. This background will be a valuable asset as a full stack developer, as I’ll be able to triage requests on my time and focus on delivering the components that map most closely the goals of the company.</p>
 		<p>Additionally, I’ve focused on how to build and design web applications that work beautifully on desktop and mobile devices. I would love to use my experience to improve the Refer a Friend feature when on a mobile device. Not all site functionality is important to have on a mobile site, but I believe that Sign Up and Referrals are the two features that should be simple and accessible on mobile devices.</p>
 		<p>I appreciate your consideration for this position and hope to hear from you soon!</p>
 		<p>Sincerely,</p>
-		<p>Kate Dramstad</p>
+		<p class="salutation">Kate Dramstad</p>
 	</div>
 </body>
 </html>
