tweaks to seed.db, how data is rendered, and css

--- a/app/views/pieces/index.html.erb
+++ b/app/views/pieces/index.html.erb
@@ -1,5 +1,5 @@
 <div id="gallery">
-	<% @pieces.each do |piece| %>
+	<% @pieces.sort.each do |piece| %>
 		<%= link_to image_tag( piece.photo_path ), piece, class: "gallery_item" %>
 	<% end %>
 </div>
