--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 		<%= yield %>
 	</div>
 	<div id="footer">
-		<%= link_to "I would love to join the RocksBox team! Let me tell you why...", coverletter_path, {:class => "cleanlink"} %>
+		<%= link_to "I would love to join the RocksBox team! Let me tell you why...", coverletter_path, {:class => "colorlink"} %>
 	</div>
 </body>
 </html>
