--- a/app/views/pieces/index.html.erb
+++ b/app/views/pieces/index.html.erb
@@ -1,7 +1,10 @@
+<div id="create_new">
+	<%= link_to "Add your RocksBox story", new_piece_path %>
+</div>
 <div id="gallery">
 	<% @pieces.sort.each do |piece| %>
 		<% if piece.photo_path.nil? %>
-			<%= link_to image_tag(piece.photo.url), piece, class: "gallery_item" %>
+			<%= link_to image_tag(piece.photo.url(:medium)), piece, class: "gallery_item" %>
 		<% else %>
 			<%= link_to image_tag(piece.photo_path ), piece, class: "gallery_item" %>
 		<% end %>
