--- a/app/assets/stylesheets/pieces.css.scss
+++ b/app/assets/stylesheets/pieces.css.scss
@@ -64,6 +64,12 @@ table {
 
 /*-------new---------*/
 
+#newpieceform {
+	display: block;
+	width: 420px;
+	margin: 30px auto 0px auto;
+}
+
 .piece_form ul {
     list-style-type:none;
     list-style-position:outside;
