--- a/app/views/pieces/new.html.erb
+++ b/app/views/pieces/new.html.erb
@@ -1,3 +1,4 @@
+<div id="newpieceform">
 <%= form_for @piece, :html => {:class => 'piece_form'}, url: {action: "create"} do |p| %>
 <ul>
 	<li>
@@ -26,3 +27,4 @@
 	</li>
 </ul>
 <% end %>
+</div>
