--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,6 +64,7 @@ h2 {
 
 #footer {
 	padding-top: 40px;
+	padding-bottom: 80px;
 	text-align: center;
 }
 
@@ -81,6 +82,10 @@ h2 {
 
 .white {
 	color: #FFFFFF;
+}
+
+.smalltext {
+	font-size: 18px;
 }
 
 /*---------Classes----------*/
