--- a/app/views/pieces/index.html.erb
+++ b/app/views/pieces/index.html.erb
@@ -1,5 +1,5 @@
 <div id="create_new">
-	<%= link_to "Add your RocksBox story", new_piece_path %>
+	<%= link_to "Share your RocksBox story!", new_piece_path %>
 </div>
 <div id="gallery">
 	<% @pieces.sort.each do |piece| %>
