prettying up the backnav on show

--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -1,11 +1,11 @@
-<div id="create_new">
-	<%= link_to "Back to all stories", pieces_path %>
+<div id="piece_back_nav">
+	<%= link_to "&#8592; Back to all stories".html_safe, pieces_path %>
 </div>
 <table>
 <tr>
 	<td class="nav_col">
 		<% if @piece.id > 1 %>
-			<%# = link_to image_tag("left.png"), @piece.previous %>
+			<%= link_to image_tag("left.png"), @piece.previous %>
 		<% end %>
 	</td>
 	<td class="contents_col">
@@ -25,7 +25,7 @@
 	</td>
 	<td class="nav_col">
 		<% if @piece.id < @pieces.count %>
-			<%# = link_to image_tag("right.png"), @piece.next %>
+			<%= link_to image_tag("right.png"), @piece.next %>
 		<% end %>
 	</td>
 </tr>
