--- a/app/assets/stylesheets/pieces.css.scss
+++ b/app/assets/stylesheets/pieces.css.scss
@@ -38,13 +38,19 @@
 
 /*-------show---------*/
 
+#piece_back_nav a{
+	display: block;
+	margin-top: 20px;
+	text-decoration: none;
+}
+
 h3 {
 	font-size: 30px;
 	font-weight: bold;
 }
 
 table {
-	margin-top: 50px;
+	margin-top: 30px;
 }
 
 .nav_col {
